# secure-drop

./: .env.example  .gitignore  .infisical.json  Dockerfile  README.md  docker-compose.yaml  error_handling.py  logging_config.py  pyproject.toml  requirements.txt  server.py  test_kissflow_integration.py  test_server.py
.github/workflows/: docker.yaml
static/css/: style.css
static/js/: app.js  openpgp.min.js  openpgp.min.js.map  public-keys.js
templates/: 413.html  index.html  layout.html  result.html
