[project]
name = "secure-drop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.26.137",
    "flask==2.2.2",
    "flask-limiter==3.8.0",
    "flask-recaptcha==0.4.2",
    "gunicorn==20.1.0",
    "jinja2==3.0.3",
    "python-dotenv==0.21.0",
    "werkzeug==2.2.2",
]
