[project]
name = "secure-drop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.39.8",
    "flask==3.1.1",
    "flask-limiter==3.11.0",
    "flask-recaptcha==0.4.2",
    "gunicorn==23.0.0",
    "jinja2==3.1.6",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
    "werkzeug==3.1.3",
]
